<resources>
    <string name="app_name">Aprende App</string>
    <string name="title_home">Cuentos</string>
    <string name="title_dashboard">Adivinanzas</string>
    <string name="title_notifications">Sugerencias</string>
    <string name="cuenrpo_cuento">"Érase una vez una niña que era muy querida por su abuelita, a la que visitaba con frecuencia aunque vivía al otro lado del bosque. Su madre que sabía coser muy bien le había hecha una bonita caperuza roja que la niña nunca se quitaba, por lo que todos la llamaban Caperucita roja.  Una tarde la madre la mandó a casa de la abuelita que se encontraba muy enferma, para que le llevara unos pasteles recién horneados, una cesta de pan y mantequilla.  – “Caperucita anda a ver cómo sigue tu abuelita y llévale esta cesta que le he preparado”, –le dijo. Además le advirtió: –“No te apartes del camino ni hables con extraños, que puede ser peligroso”.  Caperucita que siempre era obediente asintió y le contestó a su mamá: – “No te preocupes que tendré cuidado”. Tomó la cesta, se despidió cariñosamente y emprendió el camino hacia casa de su abuelita, cantando y bailando como acostumbraba.  No había llegado demasiado lejos cuando se encontró con un lobo que le preguntó: – “Caperucita, caperucita ¿a dónde vas con tantas prisas?” Caperucita lo miró y pensó en lo que le había pedido su mamá antes de salir, pero como no sintió temor alguno le contestó sin recelo. – “A casa de mi abuelita, que está muy enfermita”.  A lo que el lobo replicó: – “¿Y d ó nde vive tu abuelita?”.  – “Más allá de donde termina el bosque, en un claro rodeado de grandes robles”. – Respondió Caperucita sin sospechar que ya el lobo se deleitaba pensando en lo bien que sabría.  El lobo que ya había decidido comerse a Caperucita, pensó que era mejor si primero tomaba a la abuelita como aperitivo. – “No debe estar tan jugosa y tierna, pero igual servirá”, – se dijo mientras ideaba un plan.  Mientras acompañaba a esta por el camino, astutamente le sugirió: – “¿Sabes qué haría realmente feliz a tu abuelita? Si les llevas algunas de las flores que crecen en el bosque”.  Caperucita también pensó que era una buena idea, pero recordó nuevamente las palabras de su mamá. – “Es que mi mamá me dijo que no me apartara del camino”. A lo que el lobo le contestó: – “¿Ves ese camino que está a lo lejos? Es un atajo con el que llegarás más rápido a casa de tu abuelita”.  Sin imaginar que el lobo la había engañado, esta aceptó y se despidió de él. El lobo sin perder tiempo alguno se dirigió a la casa de la abuela, a la que engañó haciéndole creer que era su nieta Caperucita. Luego de devorar a la abuela se puso su gorro, su camisón y se metió en la cama a esperar a que llegase el plato principal de su comida.  A los pocos minutos llegó Caperucita roja, quien alegremente llamó a la puerta y al ver que nadie respondía entró. La niña se acercó lentamente a la cama, donde se encontraba tumbada su abuelita con un aspecto irreconocible. “Abuelita, que ojos más grandes tienes”, – dijo con extrañeza.  – “Son para verte mejor”, – dijo el lobo imitando con mucho esfuerzo la voz de la abuelita.  – “Abuelita, pero que orejas tan grandes tienes” – dijo Caperucita aún sin entender por qué su abuela lucía tan cambiada.  – “Son para oírte mejor”, – volvió a decir el lobo.  – “Y que boca tan grande tienes”.  – “Para comerte mejooooooooor”, – chilló el lobo que diciendo esto se abalanzó sobre Caperucita, a quien se comió de un solo bocado, igual que había hecho antes con la abuelita.  En el momento en que esto sucedía pasaba un cazador cerca de allí, que oyó lo que parecía ser el grito de una niña pequeña. Le tomó algunos minutos llegar hasta la cabaña, en la que para su sorpresa encontró al lobo durmiendo una siesta, con la panza enorme de lo harto que estaba.  El cazador dudó si disparar al malvado lobo con su escopeta, pero luego pensó que era mejor usar su cuchillo de caza y abrir su panza, para ver a quién se había comido el bribón. Y así fue como con tan solo dos cortes logró sacar a Caperucita y a su abuelita, quienes aún estaban vivas en el interior del lobo.  Entre todos decidieron darle un escarmiento al lobo, por lo que le llenaron la barriga de piedras y luego la volvieron a coser. Al despertarse este sintió una terrible sed y lo que pensó que había sido una mala digestión. Con mucho trabajo llegó al arroyo más cercano y cuando se acercó a la orilla, se tambaleó y cayó al agua, donde se ahogó por el peso de las piedras.  Caperucita roja aprendió la lección y pidió perdón a su madre por desobedecerla. En lo adelante nunca más volvería a conversar con extraños o a entretenerse en el bosque."</string>
    <string name="splash_name">Aprende App</string>
    <string name="suggestion_description">¿Tienes alguna sugerencia que hacer? quieres que algún cuento o adivinzan se agregue a la Aplicacion de \'Aprende\'. Cuentanos.</string>
    <string name="title_suggestion">Sugiere.</string>
    <string name="btn_suggestion">Enviar Sugerencia</string>
    <string name="suggestion_body">Descripcion de sugerencia.</string>
    <string name="suggestion_subject">Tema de sugerencia</string>
    <string name="titulo_delcuentos_datalle">Titulo delcuento dos</string>
    <string name="autor_name_detalle">Autor Name</string>

    <!--- API and code for youtube  -->
    <string name="titulo_delcuento_dos">Titulo delcuento dos</string>
    <string name="autor_name">Autor Name</string>
    <string name="youtube_api">AIzaSyBKjYiRlnD-fPTCIjfRJO0fRWK47SHRyp0</string>

    <!--
    <string name="id_admob">ca-app-pub-9061936515123954/5642767164</string>
    <string name="id_banner">ca-app-pub-9442185294632906/4772493187</string>
    -->

    <string name="id_admob">ca-app-pub-3940256099942544~3347511713</string>
    <string name="id_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="favoritos">favoritos</string>
    <string name="titulo_articulo">Titulo articulo</string>
</resources>

