<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView

            android:layout_width="fill_parent"
            card_view:cardElevation="12dp"
            android:background="#fff"
            android:layout_height="230dp">

            <ImageView
                android:id="@+id/imagen_poema"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:onClick="addFavorito"
                android:src="@drawable/images" />

        </androidx.cardview.widget.CardView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/ads_poema_detalle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/id_banner">
        </com.google.android.gms.ads.AdView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_weight="4"
                android:id="@+id/titulo_poema_detail"
                android:fontFamily="@font/arbutus_slab"
                android:textColor="@color/secondary_text"
                android:text="Titulo delcuento dos"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="5dp"
                android:layout_marginTop="6dp"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_like"
                android:foregroundGravity="center"
                android:tint="@color/colorAccent"
                android:layout_weight="1"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:layout_gravity="center"
                android:id="@+id/like_poema_detail"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="16sp"/>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/autor_poema_detail"
            android:text="Autor Name"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/aclonica"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/id_poema"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/poema_img_name"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/poema_video_name"
            android:visibility="gone" />


        <com.codesgood.views.JustifiedTextView
            android:id="@+id/cuerpo_poema_detail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:fontFamily="@font/arbutus_slab"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/cuenrpo_cuento"
            android:textSize="26sp" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView_cuentos_detail_full2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/id_banner">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>

</ScrollView>